--- a/index.html
+++ b/index.html
@@ -249,208 +249,296 @@
             setTimeout(() => {
                 window.location.href = "academic_calendar.html";
             }, 1500);
-        }
-    </script>
-<button type="button" class="btn" id="sendBtn">إرسال التسجيل</button>
-<button type="reset" class="btn secondary">تفريغ النموذج</button>
-</div>
-
-<div id="msg"></div>
-</form>
-</div>
-</div>
-
-<script>
-    <!DOCTYPE html>
-<html lang="ar">
+    
+</script>                                                    </div>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>نموذج تسجيل الطلاب - جامعة الملك فيصل</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 <style>
-:root{
-  --primary-green:#0f6b3f;
-  --accent-gold:#c99a2a;
-  --bg:#f4f9f6;
-  --card:#ffffff;
-  --shadow:0 8px 20px rgba(0,0,0,0.08);
-  --muted:#55606a;
-  --success:#059669;
+:root {
+  --primary-green: #0f6b3f;
+  --accent-gold: #c99a2a;
+  --bg: #f4f9f6;
+  --card: #ffffff;
+  --shadow: 0 8px 20px rgba(0,0,0,0.08);
+  --muted: #55606a;
+  --success: #059669;
 }
-body{background:var(--bg);font-family:'Noto Sans Arabic','Segoe UI',Tahoma,sans-serif;margin:0;padding:0;line-height:1.5;}
-.container{max-width:1000px;margin:0 auto;padding:20px;}
-h1{text-align:center;color:var(--primary-green);margin-bottom:30px;}
-.card{background:var(--card);padding:20px;border-radius:12px;box-shadow:var(--shadow);margin-bottom:20px;}
-.card h2{color:var(--primary-green);margin-bottom:12px;font-size:18px;border-bottom:1px solid rgba(15,107,63,0.1);padding-bottom:6px;}
-label{display:block;font-weight:700;margin-bottom:6px;font-size:14px;}
-input, select, textarea{width:100%;padding:10px;border-radius:8px;border:1px solid #e6f0ea;font-size:14px;background:#fff;}
-textarea{min-height:100px;resize:vertical;}
-.row{display:grid;grid-template-columns:1fr 1fr;gap:15px;margin-bottom:12px;}
-@media(max-width:700px){.row{grid-template-columns:1fr}}
-.btn{background:linear-gradient(90deg,var(--primary-green),#1a7a47);color:white;padding:12px 18px;border-radius:10px;border:0;cursor:pointer;font-weight:700;transition:0.3s;text-align:center;}
-.btn:hover{opacity:0.9;}
-.btn.secondary{background:transparent;color:var(--primary-green);border:1px solid rgba(15,107,63,0.12);}
-.file-preview{margin-top:10px;display:flex;gap:10px;align-items:center;}
-.file-preview img{max-width:120px;border-radius:8px;border:1px solid #e6eef0;}
-.pay-row{display:flex;justify-content:space-between;padding:8px 0;border-bottom:1px dashed rgba(15,107,63,0.06);}
-.pay-row:last-child{border-bottom:0;}
-.mono{font-family:monospace;background:#fbfff8;padding:6px 8px;border-radius:8px;border:1px solid #eef6f0;}
-.summary{background:linear-gradient(180deg,#fff,#fbfff8);border:1px solid rgba(15,107,63,0.05);padding:12px;border-radius:8px;margin-top:12px;font-size:14px;color:var(--muted);}
-.success-msg{padding:12px;background:rgba(5,150,105,0.12);border-left:5px solid var(--success);border-radius:8px;margin-top:12px;color:var(--success);font-weight:700;}
-#notification{position:fixed;top:10px;left:50%;transform:translateX(-50%);background:#0f6b3f;color:#fff;padding:12px 20px;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,0.1);z-index:9999;display:none;}
+
+body {
+  background: var(--bg);
+  font-family: 'Noto Sans Arabic', 'Segoe UI', Tahoma, sans-serif;
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
+}
+
+header {
+  background: linear-gradient(90deg, var(--primary-green), #1a7a47);
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+header img {
+  max-height: 80px;
+  display: block;
+  margin: 0 auto 10px;
+}
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+}
+h1 {
+  text-align: center;
+  color: var(--primary-green);
+  margin-bottom: 30px;
+}
+.card {
+  background: var(--card);
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: var(--shadow);
+  margin-bottom: 20px;
+}
+.card h2 {
+  color: var(--primary-green);
+  margin-bottom: 12px;
+  font-size: 18px;
+  border-bottom: 1px solid rgba(15,107,63,0.1);
+  padding-bottom: 6px;
+}
+label {
+  display: block;
+  font-weight: 700;
+  margin-bottom: 6px;
+  font-size: 14px;
+}
+input, select, textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #e6f0ea;
+  font-size: 14px;
+  background: #fff;
+}
+textarea { min-height: 100px; resize: vertical; }
+.row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  margin-bottom: 12px;
+}
+@media(max-width:700px){ .row { grid-template-columns:1fr; } }
+.btn {
+  background: linear-gradient(90deg, var(--primary-green), #1a7a47);
+  color: white;
+  padding: 12px 18px;
+  border-radius: 10px;
+  border: 0;
+  cursor: pointer;
+  font-weight: 700;
+  transition: 0.3s;
+  text-align: center;
+}
+.btn:hover { opacity: 0.9; }
+.btn.secondary {
+  background: transparent;
+  color: var(--primary-green);
+  border: 1px solid rgba(15,107,63,0.3);
+}
+.file-preview {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.file-preview img {
+  max-width: 120px;
+  border-radius: 8px;
+  border: 1px solid #e6eef0;
+}
+.pay-row {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 0;
+  border-bottom: 1px dashed rgba(15,107,63,0.1);
+}
+.pay-row:last-child { border-bottom: 0; }
+.mono {
+  font-family: monospace;
+  background: #fbfff8;
+  padding: 6px 8px;
+  border-radius: 8px;
+  border: 1px solid #eef6f0;
+}
+.summary {
+  background: linear-gradient(180deg, #fff, #fbfff8);
+  border: 1px solid rgba(15,107,63,0.05);
+  padding: 12px;
+  border-radius: 8px;
+  margin-top: 12px;
+  font-size: 14px;
+  color: var(--muted);
+}
+.success-msg {
+  padding: 12px;
+  background: rgba(5,150,105,0.12);
+  border-left: 5px solid var(--success);
+  border-radius: 8px;
+  margin-top: 12px;
+  color: var(--success);
+  font-weight: 700;
+}
+#notification {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: var(--primary-green);
+  color: #fff;
+  padding: 12px 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  z-index: 9999;
+  display: none;
+}
 </style>
 </head>
+
 <body>
 
+<header>
+  <img src="https://upload.wikimedia.org/wikipedia/ar/f/f4/King_Faisal_University_Logo.png" alt="شعار جامعة الملك فيصل">
+  <h1>نموذج تسجيل الطلاب - جامعة الملك فيصل</h1>
+</header>
+
 <div class="container">
-<h1>نموذج تسجيل الطلاب - جامعة الملك فيصل</h1>
 
-<!-- إشعار -->
-<div id="notification">سيتم تحويلك إلى نموذج التسجيل…</div>
+  <a href="#" class="btn" onclick="showNotificationAndForm()">
+    <i class="fas fa-user-graduate"></i> تقديم طلب جديد
+  </a>
 
-<!-- نموذج التسجيل -->
-<div id="registration-form" style="display:none;">
+  <div id="notification">سيتم تحويلك إلى نموذج التسجيل…</div>
 
-<div class="card">
-<form id="regForm" autocomplete="on" novalidate>
+  <div id="registration-form" style="display:none;">
 
-<h2>1. البيانات الشخصية</h2>
-<div class="row">
-<div><label>الاسم الكامل (كما في الهوية)</label><input name="fullName" type="text" required></div>
-<div><label>الاسم بالإنجليزية (اختياري)</label><input name="englishName" type="text"></div>
-</div>
-<div class="row">
-<div><label>رقم الهوية / الإقامة</label><input name="nationalId" type="text" required></div>
-<div><label>رقم السجل المدني (اختياري)</label><input name="civilId" type="text"></div>
-</div>
-<div class="row">
-<div><label>الجنس</label><select name="gender" required><option value="">-- اختر --</option><option>ذكر</option><option>أنثى</option></select></div>
-<div><label>الجنسية</label><select name="nationality" required>
-<option value="">-- اختر --</option>
-<option>السعودية</option><option>مصر</option><option>الإمارات</option><option>قطر</option>
-<option>الأردن</option><option>اليمن</option><option>دول أخرى</option>
-</select></div>
-</div>
-<div class="row">
-<div><label>تاريخ الميلاد</label><input type="date" name="birth" required></div>
-<div><label>رقم الجوال</label><input type="tel" name="phone" required placeholder="05xxxxxxxx"></div>
-</div>
-<div class="row">
-<div style="grid-column:1/3"><label>البريد الإلكتروني</label><input type="email" name="email" required></div>
-</div>
+    <div class="card">
+    <form id="regForm" autocomplete="on">
 
-<h2>2. بيانات الدراسة / العمل</h2>
-<div class="row">
-<div><label>الكلية / الجهة</label><select name="college" required>
-<option value="">-- اختر --</option>
-<option>كلية الطب</option><option>كلية الهندسة</option><option>كلية العلوم</option>
-<option>كلية إدارة الأعمال</option><option>كلية الحاسب الآلي</option>
-</select></div>
-<div><label>التخصص / البرنامج</label><input name="program" type="text" required></div>
-</div>
-<div class="row">
-<div><label>أعلى مؤهل</label><select name="degree" required>
-<option value="">-- اختر --</option><option>ثانوي</option><option>دبلوم</option><option>بكالوريوس</option><option>ماجستير</option><option>دكتوراه</option>
-</select></div>
-<div><label>المعدل</label><input name="gpa" type="text"></div>
-</div>
-<div class="row">
-<div><label>الحالة الدراسية</label><select name="studyStatus" required><option value="">-- اختر --</option><option>طالب مستمر</option><option>خريج</option><option>متقدم جديد</option></select></div>
-<div><label>جهة العمل (إن وُجد)</label><input name="work" type="text"></div>
-</div>
+      <h2>1. البيانات الشخصية</h2>
+      <div class="row">
+        <div><label>الاسم الكامل (كما في الهوية)</label><input required></div>
+        <div><label>الاسم بالإنجليزية (اختياري)</label><input></div>
+      </div>
+      <div class="row">
+        <div><label>رقم الهوية / الإقامة</label><input required></div>
+        <div><label>رقم الجوال</label><input placeholder="05xxxxxxxx" required></div>
+      </div>
+      <div class="row">
+        <div><label>الجنس</label>
+          <select required><option value="">-- اختر --</option><option>ذكر</option><option>أنثى</option></select>
+        </div>
+        <div><label>الجنسية</label>
+          <select required>
+            <option value="">-- اختر --</option>
+            <option>السعودية</option><option>اليمن</option><option>مصر</option>
+            <option>الأردن</option><option>الإمارات</option><option>قطر</option><option>دول أخرى</option>
+          </select>
+        </div>
+      </div>
+      <div><label>البريد الإلكتروني</label><input type="email" required></div>
 
-<h2>3. العنوان وبيانات الطوارئ</h2>
-<div class="row">
-<div><label>المدينة</label><input name="city" type="text"></div>
-<div><label>العنوان الكامل</label><input name="address" type="text"></div>
-</div>
-<div class="row">
-<div><label>جهة اتصال للطوارئ</label><input name="emName" type="text"></div>
-<div><label>هاتف الطوارئ</label><input name="emPhone" type="tel"></div>
-</div>
+      <h2>2. بيانات الدراسة / العمل</h2>
+      <div class="row">
+        <div><label>الكلية</label>
+          <select required>
+            <option>كلية الطب</option><option>كلية الهندسة</option>
+            <option>كلية إدارة الأعمال</option><option>كلية الحاسب الآلي</option>
+          </select>
+        </div>
+        <div><label>التخصص</label><input required></div>
+      </div>
+      <div><label>الحالة الدراسية</label>
+        <select required><option>طالب مستمر</option><option>خريج</option><option>متقدم جديد</option></select>
+      </div>
 
-<h2>4. إرفاق الشهادات / الإيصالات</h2>
-<div><label>رفع شهادة أو إيصال (PDF أو صورة)</label><input type="file" name="proof" id="proof" accept="image/*,application/pdf"></div>
-<div class="file-preview" id="preview" aria-hidden="true"></div>
+      <h2>3. العنوان وبيانات الطوارئ</h2>
+      <div class="row">
+        <div><label>المدينة</label><input></div>
+        <div><label>العنوان الكامل</label><input></div>
+      </div>
 
-<h2>5. الدفع البنكي</h2>
-<div class="row">
-<div><label>طريقة الدفع</label><select name="payMethod" required><option value="">-- اختر --</option><option>تحويل بنكي</option></select></div>
-<div><label>قيمة الرسوم (ر.س)</label><input type="number" name="fee" value="1200" readonly></div>
-</div>
+      <h2>4. رفع الملفات</h2>
+      <div><label>رفع شهادة أو إيصال (PDF أو صورة)</label><input type="file" id="proof" accept="image/*,application/pdf"></div>
+      <div class="file-preview" id="preview"></div>
 
-<div class="card">
-<h3>بيانات الدفع الرسمية</h3>
-<div class="pay-row"><div>البنك</div><div class="muted">البنك الأهلي السعودي</div></div>
-<div class="pay-row"><div>IBAN</div><div class="mono">SA19 80000857608010276380</div></div>
-<div class="summary">بعد إتمام التسجيل، سيتم مراجعة المستندات والتحقق من الدفع. تأكد من رفع الملفات المطلوبة.</div>
-</div>
+      <h2>5. الدفع البنكي</h2>
+      <div class="row">
+        <div><label>طريقة الدفع</label><select required><option>تحويل بنكي</option></select></div>
+        <div><label>الرسوم (ر.س)</label><input value="1200" readonly></div>
+      </div>
 
-<div style="display:flex;gap:10px;align-items:center;margin-top:12px">
-<button type="button" class="btn" id="sendBtn">إرسال التسجيل</button>
-<button type="reset" class="btn secondary">تفريغ النموذج</button>
-</div>
+      <div class="card">
+        <h3>بيانات الدفع الرسمية</h3>
+        <div class="pay-row"><div>البنك</div><div>البنك الأهلي السعودي</div></div>
+        <div class="pay-row"><div>IBAN</div><div class="mono">SA19 8000 0857 6080 1027 6380</div></div>
+        <div class="summary">بعد إتمام التسجيل، سيتم مراجعة المستندات والتحقق من الدفع.</div>
+      </div>
 
-<div id="msg"></div>
-</form>
-</div>
+      <div style="display:flex;gap:10px;margin-top:12px">
+        <button type="button" class="btn" id="sendBtn">إرسال التسجيل</button>
+        <button type="reset" class="btn secondary">مسح البيانات</button>
+      </div>
+
+      <div id="msg"></div>
+
+    </form>
+    </div>
+  </div>
 </div>
 
 <script>
-// إشعار + عرض النموذج عند الضغط على الزر الموجود
-function showNotificationAndForm() {
-    const notif = document.getElementById('notification');
-    notif.style.display = 'block';
-    setTimeout(() => {
-        notif.style.display = 'none';
-        const form = document.getElementById('registration-form');
-        form.style.display = 'block';
-        form.scrollIntoView({behavior:"smooth"});
-    }, 1500);
+function showNotificationAndForm(){
+  const notif=document.getElementById('notification');
+  notif.style.display='block';
+  setTimeout(()=>{
+    notif.style.display='none';
+    document.getElementById('registration-form').style.display='block';
+    document.getElementById('registration-form').scrollIntoView({behavior:"smooth"});
+  },1500);
 }
 
-// معاينة الملفات (اختياري)
-const proof = document.getElementById('proof');
-const preview = document.getElementById('preview');
-proof.addEventListener('change', () => {
-    preview.innerHTML = '';
-    Array.from(proof.files).forEach(file => {
-        const reader = new FileReader();
-        reader.onload = e => {
-            if(file.type.startsWith('image/')){
-                const img = document.createElement('img');
-                img.src = e.target.result;
-                preview.appendChild(img);
-            }else{
-                const div = document.createElement('div');
-                div.textContent = file.name;
-                preview.appendChild(div);
-            }
-        };
-        reader.readAsDataURL(file);
-    });
+const proof=document.getElementById('proof');
+const preview=document.getElementById('preview');
+proof.addEventListener('change',e=>{
+  preview.innerHTML='';
+  const file=e.target.files[0];
+  if(!file) return;
+  if(file.type.startsWith('image/')){
+    const img=document.createElement('img');
+    img.src=URL.createObjectURL(file);
+    preview.appendChild(img);
+  }else{
+    const span=document.createElement('span');
+    span.textContent='تم رفع الملف: '+file.name;
+    preview.appendChild(span);
+  }
 });
 
-// إشعار نجاح الإرسال
-const sendBtn = document.getElementById('sendBtn');
-const regForm = document.getElementById('regForm');
-const msg = document.getElementById('msg');
+const sendBtn=document.getElementById('sendBtn');
+const msg=document.getElementById('msg');
+const regForm=document.getElementById('regForm');
 sendBtn.addEventListener('click',()=>{
-    msg.innerHTML='<div class="success-msg">تم استلام طلبك بنجاح! سيتم التواصل معك قريباً لمراجعة المستندات.</div>';
-    regForm.scrollIntoView({behavior:"smooth"});
+  msg.innerHTML='<div class="success-msg">تم استلام طلبك بنجاح! سيتم التواصل معك قريباً لمراجعة المستندات.</div>';
+  regForm.scrollIntoView({behavior:"smooth"});
 });
 </script>
-
-</body>
-</html>
-</script>
-
-</body>
-</html>
-</script>
-
-                                                        </div>
 
 </body>
 </html>
